Añade variables globales CSS, crea e indexa inicio.css a index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CLAN-F</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/style.css">
-    <!-- <link rel="shortcut icon" href="" type="svg"> -->
+    <link rel="stylesheet" href="styles/inicio.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
 
     <meta name="title" content="CLAN-F | Tienda electrónica de productos con IA" />
     <meta name="description" content="Bienvenido a CLAN-F, tu tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. Descubre la innovación y comodidad que la IA puede ofrecerte en tus actividades diarias." />
@@ -24,7 +28,7 @@
 
     <main>
 
-        <!-- ... Estructura aquí ... -->
+        <h1>Inicio</h1>
 
     </main>
 
