Añade logo en nav

--- a/plantilla.html
+++ b/plantilla.html
@@ -36,18 +36,23 @@
             <input type="checkbox" class="toggle-menu__checkbox" id="toggle-menu-checkbox" />
         
             <ul id="main-menu" class="main-menu">
-                <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">Inicio</a>
-                </li>
-                <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">Quienes somos</a>
-                </li>
-                <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">Productos</a>
-                </li>
-                <li class="main-menu__item">
-                    <a href="#" class="main-menu__link">Contacto</a>
-                </li>
+                <div class="logo">
+                    <a href="index.html"><img src="assets/logo/icono.png" alt="Logo de CLAN-F" class="logo-img"></a>
+                </div>
+                <div class="main-menu__links-container">
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Inicio</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Quienes somos</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Productos</a>
+                    </li>
+                    <li class="main-menu__item">
+                        <a href="#" class="main-menu__link">Contacto</a>
+                    </li>
+                </div>
             </ul>
         </nav>
     </header>
