Crea estructura intro en index, .content con CSS

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/inicio.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
 
     <meta name="title" content="CLAN-F | Tienda electrónica de productos con IA" />
@@ -27,9 +27,25 @@
     </header>
 
     <main>
+        <!-- Introducción: -->
+        <section class="introduction">
+            <div class="introduction__content">
+                <div class="introduction__title">
+                    <h1 class="introduction__title--h1">CLAN-F</h1><span class="introduction__title--dot"></span>
+                </div>
+                <h2 class="introduction__subtitle">Inteligencia Artificial</h2>
+                <p class="introduction__paragraph">Somos <span class="introduction__paragraph--name">Clan-F</span>, una tienda especializada en productos de hogar potenciados con Inteligencia Artificial con +10 años de experiencia en el mercado.</p>
+            </div>
+            <div class="introduction__button-container">
+                <a href="#" class="introduction-btn">Descubre nuestros productos</button>
+                <a href="quienes_somos.html" class="introduction-btn">Sobre nosotros</a>
+            </div>
+        </section>
+        <div class="">
+            <!-- Scroll -->
+        </div>
 
-        <h1>Inicio</h1>
-
+        <section></section>
     </main>
 
     <footer></footer>
