--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
                 <div class="introduction__title">
                     <h1 class="introduction__title--h1">CLAN-F</h1><span class="introduction__title--dot"></span>
                 </div>
-                <h2 class="introduction__subtitle">Inteligencia Artificial</h2>
+                <div class="introduction__subtitles-container">
+                    <div class="introduction__subtitles">
+                        <h2 class="subtitle">Inteligencia Artificial</h2>
+                        <h2 class="subtitle">Forjando Futuro</h2>
+                        <h2 class="subtitle">Tecnología</h2>
+                        <h2 class="subtitle">Innovación</h2>
+                        <h2 class="subtitle">Inteligencia Artificial</h2>
+                    </div>
+                </div>
                 <p class="introduction__paragraph">Somos <span class="introduction__paragraph--name">Clan-F</span>, una tienda especializada en productos de hogar potenciados con Inteligencia Artificial con +10 años de experiencia en el mercado.</p>
             </div>
             <div class="introduction__button-container">
