Coloca estilos a btn introduction y decora con animación scroll

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
                 <a href="quienes_somos.html" class="introduction-btn">Sobre nosotros</a>
             </div>
         </section>
-        <div class="">
-            <!-- Scroll -->
+        <div class="mouse-container">
+            <div class="scroll">
+                <div class="mouse"></div>
+            </div>
         </div>
-
         <section></section>
     </main>
 
