Añade decoración en intro y media queries

--- a/index.html
+++ b/index.html
@@ -29,24 +29,32 @@
     <main>
         <!-- Introducción: -->
         <section class="introduction">
-            <div class="introduction__content">
-                <div class="introduction__title">
-                    <h1 class="introduction__title--h1">CLAN-F</h1><span class="introduction__title--dot"></span>
-                </div>
-                <div class="introduction__subtitles-container">
-                    <div class="introduction__subtitles">
-                        <h2 class="subtitle">Inteligencia Artificial</h2>
-                        <h2 class="subtitle">Forjando Futuro</h2>
-                        <h2 class="subtitle">Tecnología</h2>
-                        <h2 class="subtitle">Innovación</h2>
-                        <h2 class="subtitle">Inteligencia Artificial</h2>
+            <div class="introduction-decoration"></div>
+            <div class="introduction-container">
+                <div class="introduction__content">
+                    <h1 class="introduction__title--h1">CLAN-F<span class="introduction__title--dot"></span></h1></span>
+                    <div class="introduction__subtitles-container">
+                        <div class="introduction__subtitles desktop">
+                            <h2 class="subtitle">Inteligencia Artificial</h2>
+                            <h2 class="subtitle">Forjando Futuro</h2>
+                            <h2 class="subtitle">Tecnología</h2>
+                            <h2 class="subtitle">Innovación</h2>
+                            <h2 class="subtitle">Inteligencia Artificial</h2>
+                        </div>
+                        <div class="introduction__subtitles mobile">
+                            <h2 class="subtitle">Inteligencia</h2>
+                            <h2 class="subtitle">Artificial</h2>
+                            <h2 class="subtitle">Forjando</h2>
+                            <h2 class="subtitle">Futuro</h2>
+                            <h2 class="subtitle">Inteligencia</h2>
+                        </div>
                     </div>
+                    <p class="introduction__paragraph">Somos <span class="introduction__paragraph--name">Clan-F</span>, una tienda especializada en productos de hogar potenciados con Inteligencia Artificial con +10 años de experiencia en el mercado.</p>
                 </div>
-                <p class="introduction__paragraph">Somos <span class="introduction__paragraph--name">Clan-F</span>, una tienda especializada en productos de hogar potenciados con Inteligencia Artificial con +10 años de experiencia en el mercado.</p>
-            </div>
-            <div class="introduction__button-container">
-                <a href="#" class="introduction-btn">Descubre nuestros productos</button>
-                <a href="quienes_somos.html" class="introduction-btn">Sobre nosotros</a>
+                <div class="introduction__button-container">
+                    <a href="#" class="introduction-btn">Descubre nuestros productos</button>
+                    <a href="quienes_somos.html" class="introduction-btn">Sobre nosotros</a>
+                </div>
             </div>
         </section>
         <div class="mouse-container">
