Añade secciones de infos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
 
     <main>
-        <!-- Introducción: -->
+        <!-- Primera sección Introducción: -->
         <section class="introduction">
             <div class="introduction-decoration"></div>
             <div class="introduction-container">
@@ -49,7 +49,7 @@
                             <h2 class="subtitle">Inteligencia</h2>
                         </div>
                     </div>
-                    <p class="introduction__paragraph">Somos <span class="introduction__paragraph--name">Clan-F</span>, una tienda especializada en productos de hogar potenciados con Inteligencia Artificial con +10 años de experiencia en el mercado.</p>
+                    <p class="introduction__paragraph">Descubre productos potenciados con Inteligencia Artificial para tu uso cotidiano con <span class="introduction__paragraph--name">Clan-F</span>, líderes en el mercado de IA para el hogar.</p>
                 </div>
                 <div class="introduction__button-container">
                     <a href="#" class="introduction-btn">Descubre nuestros productos</button>
@@ -62,6 +62,51 @@
                 <div class="mouse"></div>
             </div>
         </div>
+        <!-- Segunda sección Contexto del e-commerce y landing page: -->
+        <section class="about">
+            <div class="about__logo-container">
+                <img src="assets/logo/icono-transparente.png" alt="Logo de CLAN-F" class="about__logo">
+            </div>
+            <p class="about__description">Somos una tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. En CLAN-F, estamos comprometidos en ofrecerte una experiencia de vida más inteligente y conveniente, con productos de alta calidad y  de última generación diseñados para mejorar tu hogar y vida cotidiana de formas que quizás nunca imaginaste.</p>
+            <div class="about__sponsors">
+                <img src="assets/icons/microsoft.png" alt="Logo empresa Microsoft" class="about__sponsor microsoft"></img>
+                <img src="assets/icons/amazon.png" alt="Logo empresa Amazon" class="about__sponsor amazon"></img>
+                <img src="assets/icons/apple.png" alt="Logo empresa Apple" class="about__sponsor apple"></img>
+                <img src="assets/icons/google.png" alt="Logo empresa Google" class="about__sponsor google"></img>
+            </div>
+        </section>
+        <!-- Tercera sección Grilla de productos destacados: -->
+        <section></section>
+        <!-- Cuarta sección Cards con información relevante sobre las compra: -->
+        <section class="purchase-info">
+            <div class="purchase-info-card">
+                <div class="purchase-info-card__icon-container">
+                    <img src="assets/icons/pago.svg" alt="Icono de medios de pago" class="purchase-info-card__icon">
+                </div>
+                <div class="purchase-info-card__content-container">
+                    <p class="purchase-info-card__title">Aceptamos todos los medios de pago</p>
+                    <p class="purchase-info-card__description"> Aceptamos tarjetas de crédito y débito, MercadoPago, PayPal y transferencias bancarias.</p>
+                </div>
+            </div>
+            <div class="purchase-info-card">
+                <div class="purchase-info-card__icon-container">
+                    <img src="assets/icons/envios.svg" alt="Icono de envíos a todo el país" class="purchase-info-card__icon">
+                </div>
+                <div class="purchase-info-card__content-container">
+                    <p class="purchase-info-card__title">Envíos a todo el país</p>
+                    <p class="purchase-info-card__description"> Con MercadoEnvíos y Andreani tu compra llega a la puerta de casa.</p>
+                </div>
+            </div>
+            <div class="purchase-info-card">
+                <div class="purchase-info-card__icon-container">
+                    <img src="assets/icons/seguro.svg" alt="Icono de entrega" class="purchase-info-card__icon">
+                </div>
+                <div class="purchase-info-card__content-container">
+                    <p class="purchase-info-card__title">Pagos seguros y protegidos</p>
+                    <p class="purchase-info-card__description"> Utilizamos encriptación de vanguardia para proteger tus datos personales y financieros en cada transacción.</p>
+                </div>
+            </div>
+        </section>
         <section></section>
     </main>
 
