Añade caption para scroll y separación entre elementos del about

--- a/index.html
+++ b/index.html
@@ -57,11 +57,14 @@
                 </div>
             </div>
         </section>
-        <div class="mouse-container">
-            <div class="scroll">
-                <div class="mouse"></div>
+        <div class="scrolling-container">
+            <div class="mouse-container">
+                <div class="scroll">
+                    <div class="mouse"></div>
+                </div>
             </div>
-        </div>
+            <p class="scrolling-caption">Desliza hacia abajo</p>  
+        </div>        
         <!-- Segunda sección Contexto del e-commerce y landing page: -->
         <section class="about">
             <div class="about__logo-container">
@@ -94,7 +97,7 @@
                 </div>
                 <div class="purchase-info-card__content-container">
                     <p class="purchase-info-card__title">Envíos a todo el país</p>
-                    <p class="purchase-info-card__description"> Con MercadoEnvíos y Andreani tu compra llega a la puerta de casa.</p>
+                    <p class="purchase-info-card__description"> Con MercadoEnvíos y Andreani tu compra llega a la puerta de tu casa.</p>
                 </div>
             </div>
             <div class="purchase-info-card">
@@ -102,7 +105,7 @@
                     <img src="assets/icons/seguro.svg" alt="Icono de entrega" class="purchase-info-card__icon">
                 </div>
                 <div class="purchase-info-card__content-container">
-                    <p class="purchase-info-card__title">Pagos seguros y protegidos</p>
+                    <p class="purchase-info-card__title">Compra segura y protegida</p>
                     <p class="purchase-info-card__description"> Utilizamos encriptación de vanguardia para proteger tus datos personales y financieros en cada transacción.</p>
                 </div>
             </div>
