--- a/lista_productos.html
+++ b/lista_productos.html
@@ -63,13 +63,13 @@
         <section class="products-container">
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/productos/" alt="Producto con IA" class="product-card__img">
+                    <img src="assets/img/productos/" alt="Producto con IA" class="product-card__img">
                 </div>
                 <div class="product-card__info-container">
                     <h3 class="product-card__title">Producto con IA</h3>
-                    <p class="product-card__description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi repellat, non vero nostrum veniam rerum itaque corporis atque, aspernatur enim dicta? Illum, nulla voluptates perferendis quas tempora architecto quos maiores.</p>
                     <p class="product-card__price">$ 1.500</p>
                     <button class="product-card__button">Comprar</button>
+                    <a href="#" class="product-card__button">Ver detalles</a>
                 </div>
             </div>
         </section>
