Corrige redireccionamiento de nav y añade cards plantilla

--- a/lista_productos.html
+++ b/lista_productos.html
@@ -41,16 +41,16 @@
                 </div>
                 <div class="main-menu__links-container">
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Inicio</a>
+                        <a href="index.html" class="main-menu__link">Inicio</a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Quienes somos</a>
+                        <a href="quienes_somos.html" class="main-menu__link">Quienes somos</a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Productos</a>
+                        <a href="lista_productos.html" class="main-menu__link">Productos</a>
                     </li>
                     <li class="main-menu__item">
-                        <a href="#" class="main-menu__link">Contacto</a>
+                        <a href="contacto.html" class="main-menu__link">Contacto</a>
                     </li>
                 </div>
             </ul>
@@ -61,6 +61,150 @@
         <section class="top-bar"></section>
         <!-- Lista de productos: -->
         <section class="products-container">
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
+            <div class="product-card">
+                <div class="product-card__img-container">
+                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                </div>
+                <div class="product-card__info-container">
+                    <h3 class="product-card__title">Producto con IA</h3>
+                    <div class="product-card__purchase">
+                        <p class="product-card__price">$ 1.500</p>
+                        <button class="product-card__cart-button"></button>
+                    </div>
+                </div>
+                <a href="#" class="product-card__detail-button">
+                    <span class="circle">
+                        <span class="icon arrow"></span>
+                    </span>
+                    <span class="button-text">Ver detalle</span>
+                </a>
+            </div>
             <div class="product-card">
                 <div class="product-card__img-container">
                     <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
