Añade sección beneficios IA y vídeo iframe

--- a/index.html
+++ b/index.html
@@ -147,7 +147,37 @@
                 </div>
             </div>
         </section>
-        <section></section>
+        <!-- Quinta sección Beneficios de incorporar IA en la vida cotidiana -->
+        <section class="benefits">
+            <div class="benefits-content">
+                    <h3 class="benefits__title">¿Por qué deberías incorporar IA en tu vida cotidiana?</h3>
+                    <div class="benefit-item">
+                        <div class="benefit-item__title-container">
+                            <span class="benefit-item__icon automation"></span>
+                            <p class="benefit-item__title">Automatización de tareas</p>
+                        </div>
+                        <p class="benefit-item__description">Puedes automatizar tus tareas diarias o repetitivas para liberar tiempo y concentrarte en actividades más importantes o disfrutar de tu tiempo libre.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <div class="benefit-item__title-container">
+                            <span class="benefit-item__icon energy"></span>
+                            <p class="benefit-item__title">Ahorro de energía</p>
+                        </div>
+                        <p class="benefit-item__description">Nuestros dispositivos inteligentes son eficientes energéticamente, lo que te permite reducir tu consumo eléctrico y ahorrar en tus facturas de servicios. Además, puedes controlarlos fácilmente desde tu teléfono para asegurarte de que no se queden encendidos innecesariamente.</p>
+                    </div>
+                    <div class="benefit-item">
+                        <div class="benefit-item__title-container">
+                            <span class="benefit-item__icon learning"></span>
+                            <p class="benefit-item__title">Aprendizaje personalizado</p>
+                        </div>
+                        <p class="benefit-item__description">Estos productos aprenden de tus hábitos y preferencias para adaptarse y ofrecer experiencias más personalizadas al usuario con el paso del tiempo. Cuanto más los usas, más inteligentes se vuelven.</p>
+                    </div>
+            </div>
+            <div class="benefits-image"></div> 
+            <div class="benefits-video">
+                <iframe width="100%" height="450" src="https://www.youtube.com/embed/Cx5aNwnZYDc?si=LJIgPst6iwEte0Dt" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
