--- a/plantilla.html
+++ b/plantilla.html
@@ -13,9 +13,9 @@
     <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
     
     <!-- Etiquetas meta para SEO y social media -->
-    <meta name="title" content="CLAN-F | Tienda electrónica de productos con IA" />
+    <meta name="title" content="CLAN-F | Tienda electrónica de productos con IA"/>
     <meta name="description" content="Bienvenido a CLAN-F, tu tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. Descubre la innovación y comodidad que la IA puede ofrecerte en tus actividades diarias." />
-    <meta name="keywords" content="CLAN-F, tienda electrónica, productos con Inteligencia Artificial, IA, AI, innovación, tecnología avanzada, automatización del hogar" />
+    <meta name="keywords" content="CLAN-F, tienda electrónica, productos con Inteligencia Artificial, IA, innovación, tecnología avanzada, automatización del hogar" />
     <meta name="description" content="Bienvenido a CLAN-F, tu tienda electrónica de productos personales y de hogar potenciados con Inteligencia Artificial. Descubre la innovación y comodidad que la IA puede ofrecerte en tus actividades diarias." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://paylemanc.github.io/CLAN-F--e-commerce/" />
