--- a/contacto.html
+++ b/contacto.html
@@ -29,8 +29,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
-    <script src="js/jquery-3.2.1.js"></script>
-    <script src="js/contacto.js"></script>
+    
 
 
 
@@ -115,32 +114,46 @@
 
                 <div class="col-md-7">
 
-                    <form action="" class="form_contact">
+                    <form action="" class="form_contact" id="formulario">
 
                         <h4>Dejanos tu mensaje!</h4>
 
                         <div class="mb-3">
-                            <label for="nombre" class="form-label">Nombre y Apellido</label>
-                            <input type="text" class="form-control" id="names" placeholder="Nombre y Apellido"
-                                minlength="3" maxlength="15" required>
+                            <label for="name" class="form-label">Nombre y Apellido</label>
+                            <input type="text" 
+                            class="form-control" 
+                            id="userName" 
+                            placeholder="Nombre y Apellido"
+                            minlength="3" 
+                            maxlength="15" >
                         </div>
 
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo Electronico</label>
-                            <input type="mail" class="form-control" id="email" placeholder="email" required>
+                            <input type="mail" 
+                            class="form-control" 
+                            id="userEmail" 
+                            placeholder="email">
                         </div>
 
                         <div class="mb-3">
                             <label for="celular" class="form-label">Numero Celular</label>
-                            <input type="number" class="form-control" id="celular" placeholder="Telefono">
+                            <input type="number" 
+                            class="form-control" 
+                            id="celular" 
+                            placeholder="Telefono">
                         </div>
 
                         <div class="mb-3">
                             <label for="mensaje" class="form-label">Mensaje</label>
-                            <textarea class="form-control" id="mensaje" row="3" minlength="5" maxlength="60"
-                                required></textarea>
+                            <textarea class="form-control" 
+                            id="mensaje" 
+                            row="3" 
+                            minlength="5" 
+                            maxlength="60"
+                            ></textarea>
                         </div>
-                        <button type="submit" onclick="enviarFormulario" class="btn btn-primary" id="btnSend">Enviar
+                        <button type="submit" class="btn btn-primary" id="btnSend">Enviar
                             Mensaje</button>
                     </form>
 
@@ -169,6 +182,7 @@
 
 
     <script src="js/main.js"></script>
+    <script src="js/contacto.js"></script>
 </body>
 
 </html>
