--- a/contacto.html
+++ b/contacto.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/contacto.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">    
     <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
 
     <!-- <link rel="shortcut icon" href="" type="svg"> -->
@@ -114,48 +114,61 @@
 
                 <div class="col-md-7">
 
-                    <form action="" class="form_contact" id="formulario">
+                    <form action="" class="form_contact" id="formulario" novalidate>
 
                         <h4>Dejanos tu mensaje!</h4>
 
                         <div class="mb-3">
                             <label for="name" class="form-label">Nombre y Apellido</label>
-                            <input type="text" 
+                            <input 
+                            type="text"
+                            name="userName" 
                             class="form-control" 
                             id="userName" 
                             placeholder="Nombre y Apellido"
-                            minlength="3" 
-                            maxlength="15" >
+                            >
                         </div>
+
+                        <p class="text-danger mb-2 d-none" id="alertName"></p>
 
                         <div class="mb-3">
                             <label for="email" class="form-label">Correo Electrónico</label>
-                            <input type="mail" 
+                            <input 
+                            type="mail" 
+                            name="userEmail"
                             class="form-control" 
                             id="userEmail" 
-                            placeholder="Email">
+                            placeholder="Email"
+                            >
                         </div>
+
+                        <p class="text-danger mb-2 d-none" id="alertEmail"></p>
 
                         <div class="mb-3">
                             <label for="celular" class="form-label">Número Celular</label>
-                            <input type="number" 
+                            <input 
+                            type="number" 
                             class="form-control" 
                             id="celular" 
                             placeholder="Teléfono">
                         </div>
 
+                        <p class="text-danger mb-2 d-none" id="alertCelular"></p>
+
                         <div class="mb-3">
                             <label for="mensaje" class="form-label">Mensaje</label>
-                            <textarea class="form-control" 
+                            <textarea 
+                            class="form-control" 
                             id="mensaje" 
                             row="3" 
-                            minlength="5" 
-                            maxlength="60"
+                            
                             ></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary" id="btnSend">Enviar
                             Mensaje</button>
                     </form>
+
+                    <div class="alert alert-success mt-2 d-none" id="alertSuccess"></div>
 
                 </div>
 
