Arregla alineación c-lateral-izquierdo

--- a/contacto.html
+++ b/contacto.html
@@ -8,12 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/contacto.css">
-
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Pacifico&family=Playfair+Display:wght@400;500;700;800;900&display=swap" rel="stylesheet">    
     <link rel="shortcut icon" href="assets/fav.ico" type="image/x-icon">
-
-    <!-- <link rel="shortcut icon" href="" type="svg"> -->
-
      <!-- Etiquetas meta para SEO y social media -->
     <meta name="title" content="CLAN-F | Tienda electrónica de productos con IA" />
     <meta name="description"
@@ -84,7 +80,7 @@
             
             <div class="row">
 
-                <div class="col-md-5">
+                <div class="col-md-5 c-lateral-izquierdo">
                     <div class="user">
                         <i class="bi bi-person-workspace"></i>
                     </div>
@@ -112,7 +108,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-7">
+                <div class="col-md-7 c-lateral-derecho">
 
                     <form action="" class="form_contact" id="formulario" novalidate>
 
@@ -174,7 +170,7 @@
 
             </div><br>
 
-            <h2>Te dejamos nuestra Ubicacion!</h2>
+            <h2>Te dejamos nuestra ubicación!</h2>
             <div class="mapa"><iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d26260.575272888287!2d-58.57256463734679!3d-34.640256970265284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2sar!4v1696079173306!5m2!1ses-419!2sar"
                     width="100%" height="500" style="border-radius:10px;" allowfullscreen="" loading="lazy"
