--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                     <p class="introduction__paragraph">Descubre productos potenciados con Inteligencia Artificial para tu uso cotidiano con <span class="introduction__paragraph--name">Clan-F</span>, líderes en el mercado de IA para el hogar.</p>
                 </div>
                 <div class="introduction__button-container">
-                    <a href="lista_productos.html" class="introduction-btn">Descubre nuestros productos</button>
-                    <a href="quienes_somos.html" class="introduction-btn">Sobre nosotros</a>
+                    <a href="lista_productos.html" class="introduction-btn button__animation-content">Descubre nuestros productos</button>
+                    <a href="quienes_somos.html" class="introduction-btn button__animation-content">Sobre nosotros</a>
                 </div>
             </div>
         </section>
@@ -116,7 +116,37 @@
             </div>
         </section>
         <!-- Tercera sección Grilla de productos destacados: -->
-        <section></section>
+        <section class="featured-products">
+            <div class="f-product f-product--big">
+                <p class="f-product__caption">Descubre IA de vanguardia</p>
+                <span class="f-product__link-container">
+                    <a href="lista_productos.html" class="f-product__link button__animation-content">Ver más</a>
+                </span>
+                <div class="f-product--image"></div>
+            </div>
+            <div class="f-product f-product--square aspiradora">
+                <p class="f-product__caption">Aspiradora Conga 7090</p>
+                <p class="f-product__price">$140.000</p>
+                <div class="f-product__arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="15" width="15">
+                        <path fill="#fff" d="M13.4697 17.9697C13.1768 18.2626 13.1768 18.7374 13.4697 19.0303C13.7626 19.3232 14.2374 19.3232 14.5303 19.0303L20.3232 13.2374C21.0066 12.554 21.0066 11.446 20.3232 10.7626L14.5303 4.96967C14.2374 4.67678 13.7626 4.67678 13.4697 4.96967C13.1768 5.26256 13.1768 5.73744 13.4697 6.03033L18.6893 11.25H4C3.58579 11.25 3.25 11.5858 3.25 12C3.25 12.4142 3.58579 12.75 4 12.75H18.6893L13.4697 17.9697Z"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="f-product f-product--square termostato">
+                <p class="f-product__caption">Nest Learning Termostato</p>
+                <p class="f-product__price">$90.000</p>
+                <div class="f-product__arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="15" width="15">
+                        <path fill="#fff" d="M13.4697 17.9697C13.1768 18.2626 13.1768 18.7374 13.4697 19.0303C13.7626 19.3232 14.2374 19.3232 14.5303 19.0303L20.3232 13.2374C21.0066 12.554 21.0066 11.446 20.3232 10.7626L14.5303 4.96967C14.2374 4.67678 13.7626 4.67678 13.4697 4.96967C13.1768 5.26256 13.1768 5.73744 13.4697 6.03033L18.6893 11.25H4C3.58579 11.25 3.25 11.5858 3.25 12C3.25 12.4142 3.58579 12.75 4 12.75H18.6893L13.4697 17.9697Z"></path>
+                    </svg>
+                </div>
+            </div>
+            <div class="f-product f-product--long">
+                <p class="f-product__caption">Lo mejor en asistentes de voz</p>
+                <a href="lista_productos.html" class="f-product__link button__animation-content">Ver más</a>
+            </div>
+        </section>
         <!-- Cuarta sección Cards con información relevante sobre las compra: -->
         <section class="purchase-info">
             <div class="purchase-info-card">
