modificaciones en contactos html y js

--- a/contacto.html
+++ b/contacto.html
@@ -116,6 +116,7 @@
 
                         <div class="mb-3">
                             <label for="name" class="form-label">Nombre y Apellido</label>
+
                             <input 
                             type="text"
                             name="userName" 
@@ -141,15 +142,16 @@
                         <p class="text-danger mb-2 d-none" id="alertEmail"></p>
 
                         <div class="mb-3">
-                            <label for="celular" class="form-label">Número Celular</label>
+                            <label for="number" class="form-label">Número Celular</label>
                             <input 
-                            type="number" 
+                            type="number"
+                            name="userNumber" 
                             class="form-control" 
-                            id="celular" 
+                            id="userNumber" 
                             placeholder="Teléfono">
                         </div>
 
-                        <p class="text-danger mb-2 d-none" id="alertCelular"></p>
+                        <p class="text-danger mb-2 d-none" id="alertNumber"></p>
 
                         <div class="mb-3">
                             <label for="mensaje" class="form-label">Mensaje</label>
