--- a/contacto.html
+++ b/contacto.html
@@ -158,10 +158,11 @@
                             <textarea 
                             class="form-control" 
                             id="mensaje" 
-                            row="3" 
-                            
-                            ></textarea>
+                            row="3"></textarea>
                         </div>
+
+                        <p class="text-danger mb-2 d-none" id="alertMsj"></p>
+
                         <button type="submit" class="btn btn-primary" id="btnSend">Enviar
                             Mensaje</button>
                     </form>
