Abstrae validación a función y deja comentado doc de código

--- a/contacto.html
+++ b/contacto.html
@@ -167,8 +167,7 @@
                             Mensaje</button>
                     </form>
 
-                    <div class="alert alert-success mt-2 d-none" id="alertSuccess"></div>
-
+                    <p class="alert alert-success mt-2 d-none" id="alertSuccess"></p>
                 </div>
 
             </div><br>
