--- a/lista_productos.html
+++ b/lista_productos.html
@@ -70,12 +70,12 @@
         <section class="products-container">
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/trapeadora.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Aspiradora Trapeadora Robot Atma</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 198.599</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -88,12 +88,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/olla-electrica.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Olla Electrica 6l A Presion Tipo Arrocera</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 79.999</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -106,12 +106,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/balanza_ia.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Balanza Inteligente Cocina Calorias, Carbohidratos, Proteina</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 25.000</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -124,12 +124,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/robot_de_cocina.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Robot De Cocina Automatico 6 Programas Inteligente Gadnic</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 229.999</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -142,12 +142,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/aspiradora.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Aspiradora Robot Inteligente Femmto Trapeadora Limpia Pisos</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 144.999</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -160,12 +160,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/camara.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Cámara inteligente Wi-Fi de vigilancia 360º</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 147.500</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -178,12 +178,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/camara.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Nueva cámara inteligente de Ezviz</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 248.500</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -196,12 +196,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/reloj.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Reloj Inteligente Hk8 Pro Max Ultra Con Pantalla</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 40.000</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -214,12 +214,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/reloj_1.jpg" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Smartwatch Reloj Inteligente Redondo</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 27.050</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
@@ -232,12 +232,12 @@
             </div>
             <div class="product-card">
                 <div class="product-card__img-container">
-                    <img src="assets/img/globo.png" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
+                    <img src="assets/img/productos/lavarropa.webp" alt="Producto con IA" class="product-card__img"> <!-- Imágenes insertar desde ruta assets/img/productos/ -->
                 </div>
                 <div class="product-card__info-container">
-                    <h3 class="product-card__title">Producto con IA</h3>
+                    <h3 class="product-card__title">Lavarropas Samsung 10kg Con Inteligencia Artificial Inverter</h3>
                     <div class="product-card__purchase">
-                        <p class="product-card__price">$ 1.500</p>
+                        <p class="product-card__price">$ 660.999</p>
                         <button class="product-card__cart-button"></button>
                     </div>
                 </div>
